--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,10 @@ spring.datasource.username=root
 spring.datasource.password=13579
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
+
+server.port= 8181
+
 
 
